--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,19 +5,11 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-  <a href="#" class="list-group-item clearfix"
-     *ngFor="let i_recipe of recipes">
-    <div class="pull-left">
-      <h4 class="list-group-item-heading">{{i_recipe.name}}</h4>
-      <p class="list-group-item-text">{{i_recipe.description}}</p>
-    </div>
-    <span class="pull-right">
-      <img [src]="i_recipe.imgPath"
-           alt="{{i_recipe.name}}"
-           class="img-responsive" style="max-height: 50px;">
-    </span>
-  </a>
+    <app-recipe-item
+    *ngFor="let recipeEl of recipes"
+    [recipe]="recipeEl"
+    (recipesSelected)="onRecipeSelected(recipeEl)"> </app-recipe-item>
   </div>
 </div>
 
-<app-recipe-item> </app-recipe-item>
+
