--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,20 +4,20 @@
 <!--      <button type="button" class="navbar-toggle" (click)="collapsed = !collapsed">-->
 <!--        <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>-->
 <!--      </button>-->
-      <a routerLink="/" class="navbar-brand">Recipe Book</a>
+      <a href="#" class="navbar-brand">Recipe Book</a>
     </div>
     <div class="collapse navbar-collapse">
 
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-        <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
+        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button">Manage<span class="caret"> </span> </a>
+        <li class="dropdown" appDropdown>
+          <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage<span class="caret"> </span> </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a style="cursor: pointer;">Save Data</a></li>
+            <li><a style="cursor: pointer;">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
